# IMAGE_NDVI

./: .gitignore  CMakeLists.txt  README.md
pybind_wrapper/: wrapper.cpp
python_app/: app.py  data_utils.py  main.py
src/: ndvi_calculator.cpp  ndvi_calculator.hpp
